--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,9 @@
 {
-	"id": "sample-plugin",
-	"name": "Sample Plugin",
+	"id": "bin-theme-controller",
+	"name": "Theme Controller",
 	"version": "1.0.0",
 	"minAppVersion": "0.15.0",
-	"description": "Demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md",
-	"fundingUrl": "https://obsidian.md/pricing",
+	"description": "Set when and how the obsidian themes will be displayed.",
+	"author": "Binaris",
 	"isDesktopOnly": false
 }
