--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
 	"author": "",
 	"license": "MIT",
 	"devDependencies": {
+		"@popperjs/core": "^2.11.7",
 		"@types/node": "^16.11.6",
 		"@typescript-eslint/eslint-plugin": "5.29.0",
 		"@typescript-eslint/parser": "5.29.0",
-		"@popperjs/core": "^2.11.7",
 		"builtin-modules": "3.3.0",
 		"esbuild": "0.17.3",
 		"obsidian": "latest",
+		"obsidian-typings": "^2.5.0",
 		"tslib": "2.4.0",
 		"typescript": "4.7.4"
 	}
