--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"devDependencies": {
 		"@popperjs/core": "^2.11.7",
 		"@types/node": "^16.11.6",
+		"@types/path-browserify": "^1.0.3",
 		"@typescript-eslint/eslint-plugin": "5.29.0",
 		"@typescript-eslint/parser": "5.29.0",
 		"builtin-modules": "3.3.0",
@@ -22,5 +23,8 @@
 		"obsidian-typings": "^2.5.0",
 		"tslib": "2.4.0",
 		"typescript": "4.7.4"
+	},
+	"dependencies": {
+		"path-browserify": "^1.0.1"
 	}
 }
